# ai-sdlc-backend

./: .env.example  DEVELOPMENT.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 0001_create_cars_table.py  0002_create_car_service_schedules_table.py
app/: config.py  database.py
migrations/: env.py
migrations/versions/: 0001_create_cars_table.py  0002_create_car_service_schedules_table.py
scripts/: migrate.py
tests/: conftest.py  test_car_service_schedules_migration.py  test_cars_migration.py  test_migrate_script.py  test_migrations.py
