[project]
name = "ai-sdlc-backend"
version = "0.1.0"
description = "AI SDLC Backend — Car Management"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "sqlalchemy==2.0.27",
    "psycopg2-binary==2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.2",
    "pytest-mock==3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
